@@ -4639,5 +4639,7 @@
 6.28 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>
 
 	* arch/arm/src/lpc17xx/lpc17_i2c.c:  Interrupts were not being
-	  re-enabled in the I2C intializatin function.
-
+	  re-enabled in the I2C intializatin function (2013-4-30).
+	* net/sendto.c:  Added skeleton of implementation of send timeouts
+	  for UDP.  However, this functionality really does not make
+	  sense, so it is disabled in the code (2013-4-30).
